--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -27,7 +27,7 @@ html {
 *:before,
 *:after {
   box-sizing: inherit;
-  /* outline: 1px solid #f00; */
+  /* outline: 1px solid lightblue; */
 }
 
 body {
