--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -21,6 +21,12 @@ reset
 
 html {
   box-sizing: border-box;
+  font-size: 10px;
+}
+@media (max-width: 768px) {
+  html {
+    font-size: 8px;
+  }
 }
 
 *,
